# space-time-clustering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: example_config.json
data/: detections.parquet
data/cities_global.gdb/: a00000001.gdbtable  a00000004.gdbtable  a00000006.gdbtable  a00000009.gdbtablx  a00000009.spx
scripts/: kalman_filter_playground.py  make_mock_detections.py  prepare_global_cities.py  prepare_water_land.py  run_pipeline.py  visualize_detection.py  visualize_detections.py
src/space_time_cluster/: __init__.py  classification.py  config.py  constants.py  graph.py  io.py  kalman.py  pipeline.py  spatial.py  summary.py  time_utils.py
src/space_time_cluster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_city_readers.py  test_graph.py  test_io.py  test_kalman.py  test_kalman_playground.py  test_lake_reader.py  test_pipeline_run.py  test_spatial.py  test_summary.py  test_time_utils.py  test_visualize_detections.py
